--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "basic-testcafe-example",
   "version": "1.0.0",
   "description": "Basic TestCafe API example",
-  "main": "test.js",
-  "scripts": {},
+  "main": "server.js",
+  "scripts": {
+    "test": "testcafe chrome,firefox test.js --app \"node server.js\""
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DevExpress/testcafe.git"
@@ -14,7 +16,11 @@
     "url": "https://github.com/DevExpress/testcafe/issues"
   },
   "homepage": "https://github.com/DevExpress/testcafe#readme",
+  "dependencies": {
+    "connect": "^3.4.1",
+    "serve-static": "^1.11.1"
+  },
   "devDependencies": {
-    "testcafe": "^0.16.1"
+    "testcafe": "*"
   }
 }
