--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,4 +36,6 @@ jobs:
       # run tests!
       - run: yarn test
 
-
+    test:
+      override:
+        - node_modules/testcafe/bin/testcafe.js chrome test.js
